examples/errors/typing/case_undeclared_dsort.cn
fun useUndefined : UndefinedT -> Int [pure] = {
    LFoo x -> x
  | LBar u -> 0
}
main : Int [pure] = 1
